lib/native/whisper/whisper_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// FFI bindings for Whisper.cpp
class WhisperBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  WhisperBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  WhisperBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  ffi.Pointer<ffi.Char> version() {
    return _version();
  }

  late final _versionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'whisper_version',
      );
  late final _version = _versionPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  ffi.Pointer<Context> initFromFileWithParams(
    ffi.Pointer<ffi.Char> path_model,
    ContextParams params,
  ) {
    return _initFromFileWithParams(path_model, params);
  }

  late final _initFromFileWithParamsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<Context> Function(ffi.Pointer<ffi.Char>, ContextParams)
        >
      >('whisper_init_from_file_with_params');
  late final _initFromFileWithParams = _initFromFileWithParamsPtr
      .asFunction<
        ffi.Pointer<Context> Function(ffi.Pointer<ffi.Char>, ContextParams)
      >();

  ffi.Pointer<Context> initFromFile(ffi.Pointer<ffi.Char> path_model) {
    return _initFromFile(path_model);
  }

  late final _initFromFilePtr =
      _lookup<
        ffi.NativeFunction<ffi.Pointer<Context> Function(ffi.Pointer<ffi.Char>)>
      >('whisper_init_from_file');
  late final _initFromFile = _initFromFilePtr
      .asFunction<ffi.Pointer<Context> Function(ffi.Pointer<ffi.Char>)>();

  void free(ffi.Pointer<Context> ctx) {
    return _free(ctx);
  }

  late final _freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<Context>)>>(
        'whisper_free',
      );
  late final _free = _freePtr.asFunction<void Function(ffi.Pointer<Context>)>();

  FullParams fullDefaultParams(int strategy) {
    return _fullDefaultParams(strategy);
  }

  late final _fullDefaultParamsPtr =
      _lookup<ffi.NativeFunction<FullParams Function(ffi.Int)>>(
        'whisper_full_default_params',
      );
  late final _fullDefaultParams = _fullDefaultParamsPtr
      .asFunction<FullParams Function(int)>();

  ContextParams contextDefaultParams() {
    return _contextDefaultParams();
  }

  late final _contextDefaultParamsPtr =
      _lookup<ffi.NativeFunction<ContextParams Function()>>(
        'whisper_context_default_params',
      );
  late final _contextDefaultParams = _contextDefaultParamsPtr
      .asFunction<ContextParams Function()>();

  int full(
    ffi.Pointer<Context> ctx,
    FullParams params,
    ffi.Pointer<ffi.Float> samples,
    int n_samples,
  ) {
    return _full(ctx, params, samples, n_samples);
  }

  late final _fullPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<Context>,
            FullParams,
            ffi.Pointer<ffi.Float>,
            ffi.Int,
          )
        >
      >('whisper_full');
  late final _full = _fullPtr
      .asFunction<
        int Function(
          ffi.Pointer<Context>,
          FullParams,
          ffi.Pointer<ffi.Float>,
          int,
        )
      >();

  int fullNSegments(ffi.Pointer<Context> ctx) {
    return _fullNSegments(ctx);
  }

  late final _fullNSegmentsPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<Context>)>>(
        'whisper_full_n_segments',
      );
  late final _fullNSegments = _fullNSegmentsPtr
      .asFunction<int Function(ffi.Pointer<Context>)>();

  ffi.Pointer<ffi.Char> fullGetSegmentText(
    ffi.Pointer<Context> ctx,
    int i_segment,
  ) {
    return _fullGetSegmentText(ctx, i_segment);
  }

  late final _fullGetSegmentTextPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<Context>, ffi.Int)
        >
      >('whisper_full_get_segment_text');
  late final _fullGetSegmentText = _fullGetSegmentTextPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<Context>, int)>();

  int fullGetSegmentT0(ffi.Pointer<Context> ctx, int i_segment) {
    return _fullGetSegmentT0(ctx, i_segment);
  }

  late final _fullGetSegmentT0Ptr =
      _lookup<
        ffi.NativeFunction<ffi.Int64 Function(ffi.Pointer<Context>, ffi.Int)>
      >('whisper_full_get_segment_t0');
  late final _fullGetSegmentT0 = _fullGetSegmentT0Ptr
      .asFunction<int Function(ffi.Pointer<Context>, int)>();

  int fullGetSegmentT1(ffi.Pointer<Context> ctx, int i_segment) {
    return _fullGetSegmentT1(ctx, i_segment);
  }

  late final _fullGetSegmentT1Ptr =
      _lookup<
        ffi.NativeFunction<ffi.Int64 Function(ffi.Pointer<Context>, ffi.Int)>
      >('whisper_full_get_segment_t1');
  late final _fullGetSegmentT1 = _fullGetSegmentT1Ptr
      .asFunction<int Function(ffi.Pointer<Context>, int)>();

  int fullNTokens(ffi.Pointer<Context> ctx, int i_segment) {
    return _fullNTokens(ctx, i_segment);
  }

  late final _fullNTokensPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<Context>, ffi.Int)>
      >('whisper_full_n_tokens');
  late final _fullNTokens = _fullNTokensPtr
      .asFunction<int Function(ffi.Pointer<Context>, int)>();

  ffi.Pointer<ffi.Char> fullGetTokenText(
    ffi.Pointer<Context> ctx,
    int i_segment,
    int i_token,
  ) {
    return _fullGetTokenText(ctx, i_segment, i_token);
  }

  late final _fullGetTokenTextPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<Context>, ffi.Int, ffi.Int)
        >
      >('whisper_full_get_token_text');
  late final _fullGetTokenText = _fullGetTokenTextPtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<Context>, int, int)
      >();

  int fullLangId(ffi.Pointer<Context> ctx) {
    return _fullLangId(ctx);
  }

  late final _fullLangIdPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<Context>)>>(
        'whisper_full_lang_id',
      );
  late final _fullLangId = _fullLangIdPtr
      .asFunction<int Function(ffi.Pointer<Context>)>();

  int nVocab(ffi.Pointer<Context> ctx) {
    return _nVocab(ctx);
  }

  late final _nVocabPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<Context>)>>(
        'whisper_n_vocab',
      );
  late final _nVocab = _nVocabPtr
      .asFunction<int Function(ffi.Pointer<Context>)>();

  int nTextCtx(ffi.Pointer<Context> ctx) {
    return _nTextCtx(ctx);
  }

  late final _nTextCtxPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<Context>)>>(
        'whisper_n_text_ctx',
      );
  late final _nTextCtx = _nTextCtxPtr
      .asFunction<int Function(ffi.Pointer<Context>)>();

  int nAudioCtx(ffi.Pointer<Context> ctx) {
    return _nAudioCtx(ctx);
  }

  late final _nAudioCtxPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<Context>)>>(
        'whisper_n_audio_ctx',
      );
  late final _nAudioCtx = _nAudioCtxPtr
      .asFunction<int Function(ffi.Pointer<Context>)>();

  int isMultilingual(ffi.Pointer<Context> ctx) {
    return _isMultilingual(ctx);
  }

  late final _isMultilingualPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<Context>)>>(
        'whisper_is_multilingual',
      );
  late final _isMultilingual = _isMultilingualPtr
      .asFunction<int Function(ffi.Pointer<Context>)>();
}

final class Context extends ffi.Opaque {}

final class FullParams extends ffi.Struct {
  @ffi.Int()
  external int strategy;

  @ffi.Int()
  external int n_threads;

  @ffi.Int()
  external int n_max_text_ctx;

  @ffi.Int()
  external int offset_ms;

  @ffi.Int()
  external int duration_ms;

  @ffi.Bool()
  external bool translate;

  @ffi.Bool()
  external bool no_context;

  @ffi.Bool()
  external bool no_timestamps;

  @ffi.Bool()
  external bool single_segment;

  @ffi.Bool()
  external bool print_special;

  @ffi.Bool()
  external bool print_progress;

  @ffi.Bool()
  external bool print_realtime;

  @ffi.Bool()
  external bool print_timestamps;

  @ffi.Bool()
  external bool token_timestamps;

  @ffi.Float()
  external double thold_pt;

  @ffi.Float()
  external double thold_ptsum;

  @ffi.Int()
  external int max_len;

  @ffi.Bool()
  external bool split_on_word;

  @ffi.Int()
  external int max_tokens;

  @ffi.Bool()
  external bool debug_mode;

  @ffi.Int()
  external int audio_ctx;

  @ffi.Bool()
  external bool tdrz_enable;

  external ffi.Pointer<ffi.Char> suppress_regex;

  external ffi.Pointer<ffi.Char> initial_prompt;

  @ffi.Bool()
  external bool carry_initial_prompt;

  external ffi.Pointer<ffi.Int> prompt_tokens;

  @ffi.Int()
  external int prompt_n_tokens;

  external ffi.Pointer<ffi.Char> language;

  @ffi.Bool()
  external bool detect_language;

  @ffi.Bool()
  external bool suppress_blank;

  @ffi.Bool()
  external bool suppress_nst;

  @ffi.Float()
  external double temperature;

  @ffi.Float()
  external double max_initial_ts;

  @ffi.Float()
  external double length_penalty;

  @ffi.Float()
  external double temperature_inc;

  @ffi.Float()
  external double entropy_thold;

  @ffi.Float()
  external double logprob_thold;

  @ffi.Float()
  external double no_speech_thold;

  external UnnamedStruct1 greedy;

  external UnnamedStruct2 beam_search;

  external ffi.Pointer<ffi.Void> new_segment_callback;

  external ffi.Pointer<ffi.Void> new_segment_callback_user_data;

  external ffi.Pointer<ffi.Void> progress_callback;

  external ffi.Pointer<ffi.Void> progress_callback_user_data;

  external ffi.Pointer<ffi.Void> encoder_begin_callback;

  external ffi.Pointer<ffi.Void> encoder_begin_callback_user_data;

  external ffi.Pointer<ffi.Void> abort_callback;

  external ffi.Pointer<ffi.Void> abort_callback_user_data;

  external ffi.Pointer<ffi.Void> logits_filter_callback;

  external ffi.Pointer<ffi.Void> logits_filter_callback_user_data;

  external ffi.Pointer<ffi.Pointer<ffi.Void>> grammar_rules;

  @ffi.Size()
  external int n_grammar_rules;

  @ffi.Size()
  external int i_start_rule;

  @ffi.Float()
  external double grammar_penalty;

  @ffi.Bool()
  external bool vad;

  external ffi.Pointer<ffi.Char> vad_model_path;

  external UnnamedStruct3 vad_params;
}

final class UnnamedStruct1 extends ffi.Struct {
  @ffi.Int()
  external int best_of;
}

final class UnnamedStruct2 extends ffi.Struct {
  @ffi.Int()
  external int beam_size;

  @ffi.Float()
  external double patience;
}

final class UnnamedStruct3 extends ffi.Struct {
  @ffi.Float()
  external double threshold;

  @ffi.Int()
  external int min_speech_duration_ms;

  @ffi.Int()
  external int min_silence_duration_ms;

  @ffi.Float()
  external double max_speech_duration_s;

  @ffi.Int()
  external int speech_pad_ms;

  @ffi.Float()
  external double samples_overlap;
}

final class ContextParams extends ffi.Struct {
  @ffi.Bool()
  external bool use_gpu;

  @ffi.Bool()
  external bool flash_attn;

  @ffi.Int()
  external int gpu_device;

  @ffi.Bool()
  external bool dtw_token_timestamps;

  @ffi.Int()
  external int dtw_aheads_preset;

  @ffi.Int()
  external int dtw_n_top;

  external ffi.Pointer<ffi.Void> dtw_aheads;

  @ffi.Size()
  external int dtw_mem_size;
}

abstract class whisper_sampling_strategy {
  static const int WHISPER_SAMPLING_GREEDY = 0;
  static const int WHISPER_SAMPLING_BEAM_SEARCH = 1;
}

final class whisper_aheads extends ffi.Struct {
  @ffi.Size()
  external int n_heads;

  external ffi.Pointer<whisper_ahead> heads;
}

typedef whisper_ahead = ffi.Pointer<ffi.Void>;

const int _STDINT_H = 1;

const int _FEATURES_H = 1;

const int _DEFAULT_SOURCE = 1;

const int __USE_ISOC11 = 1;

const int __USE_ISOC99 = 1;

const int __USE_ISOC95 = 1;

const int _POSIX_SOURCE = 1;

const int _POSIX_C_SOURCE = 200809;

const int __USE_POSIX = 1;

const int __USE_POSIX2 = 1;

const int __USE_POSIX199309 = 1;

const int __USE_POSIX199506 = 1;

const int __USE_XOPEN2K = 1;

const int __USE_XOPEN2K8 = 1;

const int _ATFILE_SOURCE = 1;

const int __WORDSIZE = 64;

const int __WORDSIZE_TIME64_COMPAT32 = 1;

const int __SYSCALL_WORDSIZE = 64;

const int __TIMESIZE = 64;

const int __USE_MISC = 1;

const int __USE_ATFILE = 1;

const int __USE_FORTIFY_LEVEL = 0;

const int __GLIBC_USE_DEPRECATED_GETS = 0;

const int __GLIBC_USE_DEPRECATED_SCANF = 0;

const int _STDC_PREDEF_H = 1;

const int __STDC_IEC_559__ = 1;

const int __STDC_IEC_559_COMPLEX__ = 1;

const int __STDC_ISO_10646__ = 201706;

const int __GNU_LIBRARY__ = 6;

const int __GLIBC__ = 2;

const int __GLIBC_MINOR__ = 31;

const int _SYS_CDEFS_H = 1;

const int __glibc_c99_flexarr_available = 1;

const int __HAVE_GENERIC_SELECTION = 0;

const int __GLIBC_USE_LIB_EXT2 = 1;

const int __GLIBC_USE_IEC_60559_BFP_EXT = 1;

const int __GLIBC_USE_IEC_60559_FUNCS_EXT = 1;

const int __GLIBC_USE_IEC_60559_TYPES_EXT = 1;

const int _BITS_TYPES_H = 1;

const int _BITS_TYPESIZES_H = 1;

const int __OFF_T_MATCHES_OFF64_T = 1;

const int __INO_T_MATCHES_INO64_T = 1;

const int __RLIM_T_MATCHES_RLIM64_T = 1;

const int __STATFS_MATCHES_STATFS64 = 1;

const int __FD_SETSIZE = 1024;

const int _BITS_TIME64_H = 1;

const int _BITS_WCHAR_H = 1;

const int __WCHAR_MAX = 2147483647;

const int __WCHAR_MIN = -2147483648;

const int _BITS_STDINT_INTN_H = 1;

const int _BITS_STDINT_UINTN_H = 1;

const int INT8_MIN = -128;

const int INT16_MIN = -32768;

const int INT32_MIN = -2147483648;

const int INT64_MIN = -9223372036854775808;

const int INT8_MAX = 127;

const int INT16_MAX = 32767;

const int INT32_MAX = 2147483647;

const int INT64_MAX = 9223372036854775807;

const int UINT8_MAX = 255;

const int UINT16_MAX = 65535;

const int UINT32_MAX = 4294967295;

const int UINT64_MAX = -1;

const int INT_LEAST8_MIN = -128;

const int INT_LEAST16_MIN = -32768;

const int INT_LEAST32_MIN = -2147483648;

const int INT_LEAST64_MIN = -9223372036854775808;

const int INT_LEAST8_MAX = 127;

const int INT_LEAST16_MAX = 32767;

const int INT_LEAST32_MAX = 2147483647;

const int INT_LEAST64_MAX = 9223372036854775807;

const int UINT_LEAST8_MAX = 255;

const int UINT_LEAST16_MAX = 65535;

const int UINT_LEAST32_MAX = 4294967295;

const int UINT_LEAST64_MAX = -1;

const int INT_FAST8_MIN = -128;

const int INT_FAST16_MIN = -9223372036854775808;

const int INT_FAST32_MIN = -9223372036854775808;

const int INT_FAST64_MIN = -9223372036854775808;

const int INT_FAST8_MAX = 127;

const int INT_FAST16_MAX = 9223372036854775807;

const int INT_FAST32_MAX = 9223372036854775807;

const int INT_FAST64_MAX = 9223372036854775807;

const int UINT_FAST8_MAX = 255;

const int UINT_FAST16_MAX = -1;

const int UINT_FAST32_MAX = -1;

const int UINT_FAST64_MAX = -1;

const int INTPTR_MIN = -9223372036854775808;

const int INTPTR_MAX = 9223372036854775807;

const int UINTPTR_MAX = -1;

const int INTMAX_MIN = -9223372036854775808;

const int INTMAX_MAX = 9223372036854775807;

const int UINTMAX_MAX = -1;

const int PTRDIFF_MIN = -9223372036854775808;

const int PTRDIFF_MAX = 9223372036854775807;

const int SIG_ATOMIC_MIN = -2147483648;

const int SIG_ATOMIC_MAX = 2147483647;

const int SIZE_MAX = -1;

const int WCHAR_MIN = -2147483648;

const int WCHAR_MAX = 2147483647;

const int WINT_MIN = 0;

const int WINT_MAX = 4294967295;

const int NULL = 0;

const int true1 = 1;

const int false1 = 0;

const int __bool_true_false_are_defined = 1;
